force-app/main/default/objects/Application_Block__c/Application_Block__c.object-meta.xml
<CustomObject>
    <label>Application Block</label>
    <nameField>
        <displayFormat>Block-{000000}</displayFormat>
        <label>Application Block Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Blocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>