force-app/main/default/objects/Application_Block__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Blocks</relationshipLabel>
    <relationshipName>Application_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>