force-app/main/default/objects/Application_Block__c/fields/Application_Block_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Block_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Application Block External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>