force-app/main/default/objects/Application_Block__c/fields/Application_Policy__c.field-meta.xml
<CustomField>
    <fullName>Application_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application/Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Application Blocks</relationshipLabel>
    <relationshipName>Application_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>