force-app/main/default/objects/Application_Block__c/fields/Policy_Account__c.field-meta.xml
<CustomField>
    <fullName>Policy_Account__c</fullName>
    <formula>Application_Policy__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Account</label>
    <type>Text</type>
</CustomField>